# PyHallymInfo

./: README.md  pyproject.toml
pyhallyminfo/: __init__.py  scrapper.py
