[tool.poetry]
name = "pyhallyminfo"
version = "0.1.0"
description = ""
authors = ["Hyun Park <hyunp.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
html5lib = "^1.1"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
